src/objects/Charket__SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__SurveyAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Answer</label>
        <referenceTo>Charket__SurveyAnswer__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Charket__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__SurveyTaken__c</fullName>
        <label>Survey Taken</label>
        <referenceTo>Charket__SurveyTaken__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>